--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 # Needed by npm, substitutes the correct NPM token using an environment variable.
 # The variable is exported by the CI and passed as a Docker build argument.
-#//registry.npmjs.org/:_authToken=${NPM_TOKEN}
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
